fix: 改進 tag 刪除錯誤處理，顯示更詳細的權限問題訊息

--- a/.github/workflows/cleanup-resources.yml
+++ b/.github/workflows/cleanup-resources.yml
@@ -190,7 +190,11 @@ jobs:
               if [ -n "$TAGS" ]; then
                 for TAG in $TAGS; do
                   echo "    Removing tag: $TAG"
-                  gcloud artifacts docker tags delete "${IMAGE_URI}:${TAG}" --quiet || true
+                  if gcloud artifacts docker tags delete "${IMAGE_URI}:${TAG}" --quiet 2>&1; then
+                    echo "    ✅ Successfully deleted tag: $TAG"
+                  else
+                    echo "    ⚠️ Failed to delete tag: $TAG (may need permission: artifactregistry.tags.delete)"
+                  fi
                 done
               fi
 
@@ -244,7 +248,11 @@ jobs:
               if [ -n "$TAGS" ]; then
                 for TAG in $TAGS; do
                   echo "    Removing tag: $TAG"
-                  gcloud artifacts docker tags delete "${IMAGE_URI}:${TAG}" --quiet || true
+                  if gcloud artifacts docker tags delete "${IMAGE_URI}:${TAG}" --quiet 2>&1; then
+                    echo "    ✅ Successfully deleted tag: $TAG"
+                  else
+                    echo "    ⚠️ Failed to delete tag: $TAG (may need permission: artifactregistry.tags.delete)"
+                  fi
                 done
               fi
 
