feat: 新增部署監控和映像清理管理工具
新增功能：
1. 監控腳本 (scripts/monitor-deployment.sh)
   - 即時監控 GitHub Actions 部署狀態
   - 檢查映像清理結果
   - Cloud Run 服務健康檢查
   - 成本估算和優化建議

2. Git Hook (.githooks/post-push)
   - push 後自動啟動監控
   - 背景執行不阻塞工作流程

3. NPM 指令快捷鍵
   - npm run monitor - 執行監控
   - npm run monitor:staging - 監控 staging 分支
   - npm run cleanup:images - 手動觸發清理
   - npm run deploy:status - 查看部署狀態
   - npm run deploy:watch - 觀看正在執行的部署

使用方式：
1. git push 後會自動開始監控
2. 或手動執行 npm run monitor
3. 查看映像成本和清理建議

--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "test:e2e:debug": "playwright test --debug",
     "test:report": "playwright show-report",
     "test:install": "playwright install",
-    "test:all": "npm run test:api:all && npm run test:e2e"
+    "test:all": "npm run test:api:all && npm run test:e2e",
+    "monitor": "chmod +x scripts/monitor-deployment.sh && ./scripts/monitor-deployment.sh",
+    "monitor:staging": "chmod +x scripts/monitor-deployment.sh && ./scripts/monitor-deployment.sh staging",
+    "monitor:main": "chmod +x scripts/monitor-deployment.sh && ./scripts/monitor-deployment.sh main",
+    "cleanup:images": "gh workflow run cleanup-resources.yml --ref $(git branch --show-current) -f keep_images=2 -f keep_revisions=1",
+    "deploy:status": "gh run list --workflow=deploy-staging-supabase.yml --limit=5",
+    "deploy:watch": "gh run watch $(gh run list --workflow=deploy-staging-supabase.yml --status=in_progress --limit=1 --json databaseId -q '.[0].databaseId')"
   },
   "devDependencies": {
     "@playwright/test": "^1.55.0"
