fix: Add api directory to Dockerfile - Fix Azure Speech Assessment 404 error
重要修復：Azure AI 評估 404 錯誤！

問題：
- staging 環境中 /api/debug/system-check 返回 404
- 原因：Dockerfile 沒有複製 api/ 目錄到 Docker image

解決方案：
- 在 Dockerfile 中加入 COPY ap[i] ./api/
- 這樣 api/debug.py 會被包含在部署中
- Azure Speech Assessment 測試按鈕將正常工作

額外修復：
- 本地開發環境的 GCS 上傳改用本地儲存
- 修復所有 linting 錯誤

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -29,6 +29,7 @@ COPY alembic.ini ./
 COPY service[s] ./services/
 COPY router[s] ./routers/
 COPY cor[e] ./core/
+COPY ap[i] ./api/
 
 # 複製 GCS service account key（如果存在）
 COPY service-account-key.jso[n] ./service-account-key.json
