fix: 更新 GitHub Actions 工作流程，移除廢棄的 fail_on_error 參數
- 將 reviewdog/action-detect-secrets 的 fail_on_error 更新為 fail_level: none
- 修復 GitHub Actions 中的廢棄參數警告

--- a/.github/workflows/deploy-staging-supabase.yml
+++ b/.github/workflows/deploy-staging-supabase.yml
@@ -127,7 +127,7 @@ jobs:
         continue-on-error: true
         with:
           reporter: github-pr-review
-          fail_on_error: false
+          fail_level: none
 
   dependency-check:
     name: 🔍 Dependency Vulnerabilities
