fix: 改進 CI/CD 憑證檢查，排除測試檔案避免誤報
- 排除 tests、__tests__、test 目錄
- 排除 *.test.* 和 *.spec.* 測試檔案
- 新增過濾條件排除包含 test/Test/TEST 的行
- 減少測試檔案中假資料造成的誤報警告

--- a/.github/workflows/deploy-staging-supabase.yml
+++ b/.github/workflows/deploy-staging-supabase.yml
@@ -199,7 +199,12 @@ jobs:
             --include="Makefile" \
             --exclude-dir=node_modules \
             --exclude-dir=.git \
-            --exclude="*.example" | \
+            --exclude-dir=tests \
+            --exclude-dir=__tests__ \
+            --exclude-dir=test \
+            --exclude="*.example" \
+            --exclude="*.test.*" \
+            --exclude="*.spec.*" | \
             grep -v "dummy" | \
             grep -v "localhost"; then
             echo "::warning::Found exposed database credentials!"
@@ -214,10 +219,18 @@ jobs:
             --include="Makefile" \
             --exclude-dir=node_modules \
             --exclude-dir=.git \
-            --exclude="*.example" | \
+            --exclude-dir=tests \
+            --exclude-dir=__tests__ \
+            --exclude-dir=test \
+            --exclude="*.example" \
+            --exclude="*.test.*" \
+            --exclude="*.spec.*" | \
             grep -v "your-" | \
             grep -v "dummy" | \
-            grep -v "TODO"; then
+            grep -v "TODO" | \
+            grep -v "test" | \
+            grep -v "Test" | \
+            grep -v "TEST"; then
             echo "::warning::Found hardcoded credentials!"
           fi
 
