--- a/.github/workflows/deploy-staging-supabase.yml
+++ b/.github/workflows/deploy-staging-supabase.yml
@@ -258,16 +258,21 @@ jobs:
       uses: google-github-actions/auth@v2
       with:
         credentials_json: ${{ secrets.GCP_SA_KEY }}
+        project_id: ${{ env.PROJECT_ID }}
 
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
+      with:
+        project_id: ${{ env.PROJECT_ID }}
 
     - name: Create GCS Service Account Key File
       run: |
         echo "${{ secrets.GCS_SERVICE_ACCOUNT_KEY }}" | base64 -d > backend/service-account-key.json
 
     - name: Configure Docker for Artifact Registry
-      run: gcloud auth configure-docker $REGION-docker.pkg.dev
+      run: |
+        gcloud config set project $PROJECT_ID
+        gcloud auth configure-docker $REGION-docker.pkg.dev
 
     # 設定資料庫環境變數 - Supabase
     - name: Set Database Environment Variables
