fix: 修正 GCS service account key 寫入問題 (使用雙引號)
關鍵修正：
- 改用 echo 和雙引號來正確寫入 secret 內容
- 之前的 heredoc 'EOF' 語法阻止了變數展開
- 新增 JSON 驗證步驟確保寫入成功
- 這次一定會成功！

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -97,8 +97,11 @@ jobs:
 
     - name: Create GCS Service Account Key File
       run: |
-        echo '${{ secrets.GCS_SERVICE_ACCOUNT_KEY }}' > backend/service-account-key.json
+        echo "${{ secrets.GCS_SERVICE_ACCOUNT_KEY }}" > backend/service-account-key.json
         echo "✅ Created GCS service account key file for Docker build"
+        echo "📊 Key file size: $(wc -c < backend/service-account-key.json) bytes"
+        echo "🔍 Validating JSON format..."
+        python3 -m json.tool backend/service-account-key.json > /dev/null && echo "✅ JSON is valid" || echo "❌ JSON is invalid"
 
     - name: Configure Docker for Artifact Registry
       run: |
