docs: 更新 .env.example 加入 VITE_ENVIRONMENT 說明

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,9 +1,10 @@
+# Environment
+VITE_ENVIRONMENT=development
+
+# API Endpoint
 VITE_API_URL=http://localhost:8080
 
 # TapPay Configuration
 VITE_TAPPAY_APP_ID=YOUR_APP_ID_HERE
 VITE_TAPPAY_APP_KEY=YOUR_APP_KEY_HERE
 VITE_TAPPAY_SERVER_TYPE=sandbox
-
-# Environment
-VITE_ENVIRONMENT=development
