--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -206,7 +206,8 @@ jobs:
               'assignments', 'assignment_content', 'student_assignments',
               'student_content_progress', 'student_item_progress',
               'subscription_periods', 'point_usage_logs',
-              'teacher_subscription_transaction', 'invoice_status_history'
+              'teacher_subscription_transaction', 'invoice_status_history',
+              'user_word_progress', 'practice_sessions', 'practice_answers'
             )
           ORDER BY tablename;
         " | xargs)
