--- a/.github/workflows/test-issue-branch.yml
+++ b/.github/workflows/test-issue-branch.yml
@@ -4,9 +4,25 @@ on:
   push:
     branches:
       - 'fix/issue-*'
+    paths:
+      - 'frontend/**'
+      - '!**/*.md'
 
 jobs:
+  extract:
+    runs-on: ubuntu-latest
+    outputs:
+      issue_number: ${{ steps.extract.outputs.issue_number }}
+    steps:
+      - name: Extract issue number
+        id: extract
+        run: |
+          ISSUE_NUM=$(echo "${{ github.ref_name }}" | grep -oE '[0-9]+')
+          echo "issue_number=$ISSUE_NUM" >> $GITHUB_OUTPUT
+          echo "Issue: $ISSUE_NUM"
+
   test:
     runs-on: ubuntu-latest
+    needs: extract
     steps:
-      - run: echo "Branch ${{ github.ref_name }} matched!"
+      - run: echo "Branch matched! Issue #${{ needs.extract.outputs.issue_number }}"
