--- a/.github/workflows/deploy-per-issue-simple.yml
+++ b/.github/workflows/deploy-per-issue-simple.yml
@@ -152,12 +152,20 @@ jobs:
       issues: write
     steps:
       - name: Comment on issue
+        env:
+          ISSUE_NUM: ${{ needs.extract-issue-number.outputs.issue_number }}
+          FRONTEND_URL: ${{ needs.deploy-frontend.outputs.frontend_url }}
+          BACKEND_URL: ${{ needs.deploy-backend.outputs.backend_url }}
+          BRANCH: ${{ github.ref_name }}
+          COMMIT: ${{ github.sha }}
         uses: actions/github-script@v7
         with:
           script: |
-            const issue_number = ${{ needs.extract-issue-number.outputs.issue_number }};
-            const frontend_url = '${{ needs.deploy-frontend.outputs.frontend_url }}';
-            const backend_url = '${{ needs.deploy-backend.outputs.backend_url }}';
+            const issue_number = process.env.ISSUE_NUM;
+            const frontend_url = process.env.FRONTEND_URL;
+            const backend_url = process.env.BACKEND_URL;
+            const branch = process.env.BRANCH;
+            const commit = process.env.COMMIT;
 
             await github.rest.issues.createComment({
               owner: context.repo.owner,
@@ -169,8 +177,8 @@ jobs:
 - Frontend: ${frontend_url}
 - Backend: ${backend_url}
 
-Branch: \`${{ github.ref_name }}\`
-Commit: \`${{ github.sha }}\`
+Branch: \`${branch}\`
+Commit: \`${commit}\`
 
 Min instances = 0，沒人訪問時不收費。測試完成後請留言「測試通過」。`
             });
