--- a/.github/workflows/per-issue-preview.yml
+++ b/.github/workflows/per-issue-preview.yml
@@ -32,93 +32,25 @@ jobs:
     runs-on: ubuntu-latest
     needs: extract
     outputs:
-      url: ${{ steps.deploy.outputs.url }}
+      url: ${{ steps.mock.outputs.url }}
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-
-      - uses: google-github-actions/setup-gcloud@v2
-
-      - name: Build and deploy backend
-        id: deploy
-        working-directory: ./backend
+      - name: Mock backend deployment
+        id: mock
         run: |
-          ISSUE=${{ needs.extract.outputs.issue_number }}
-          SERVICE="duotopia-preview-issue-${ISSUE}-backend"
-          IMAGE="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${SERVICE}:${{ github.sha }}"
-
-          gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev
-
-          docker build -t "$IMAGE" .
-          docker push "$IMAGE"
-
-          gcloud run deploy "$SERVICE" \
-            --image "$IMAGE" \
-            --platform managed \
-            --region ${{ env.REGION }} \
-            --allow-unauthenticated \
-            --port 8000 \
-            --memory 512Mi \
-            --max-instances 1 \
-            --min-instances 0 \
-            --set-env-vars "DATABASE_URL=${{ secrets.STAGING_DATABASE_URL }},ENVIRONMENT=preview" \
-            --labels "environment=preview,issue=${ISSUE}"
-
-          URL=$(gcloud run services describe "$SERVICE" --platform managed --region ${{ env.REGION }} --format 'value(status.url)')
-          echo "url=$URL" >> $GITHUB_OUTPUT
+          echo "url=https://backend-issue-${{ needs.extract.outputs.issue_number }}.example.com" >> $GITHUB_OUTPUT
+          echo "Mock backend deployed"
 
   frontend:
     runs-on: ubuntu-latest
     needs: [extract, backend]
     outputs:
-      url: ${{ steps.deploy.outputs.url }}
+      url: ${{ steps.mock.outputs.url }}
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-
-      - uses: google-github-actions/setup-gcloud@v2
-
-      - name: Build and deploy frontend
-        id: deploy
-        working-directory: ./frontend
+      - name: Mock frontend deployment
+        id: mock
         run: |
-          ISSUE=${{ needs.extract.outputs.issue_number }}
-          SERVICE="duotopia-preview-issue-${ISSUE}-frontend"
-          IMAGE="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${SERVICE}:${{ github.sha }}"
-
-          gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev
-
-          docker build \
-            -f Dockerfile.staging \
-            --build-arg VITE_API_URL=${{ needs.backend.outputs.url }} \
-            --build-arg VITE_ENVIRONMENT=preview \
-            --build-arg VITE_TAPPAY_SERVER_TYPE=production \
-            --build-arg VITE_TAPPAY_PRODUCTION_APP_ID=${{ secrets.TAPPAY_PRODUCTION_APP_ID }} \
-            --build-arg VITE_TAPPAY_PRODUCTION_APP_KEY=${{ secrets.TAPPAY_PRODUCTION_APP_KEY }} \
-            -t "$IMAGE" \
-            .
-
-          docker push "$IMAGE"
-
-          gcloud run deploy "$SERVICE" \
-            --image "$IMAGE" \
-            --platform managed \
-            --region ${{ env.REGION }} \
-            --allow-unauthenticated \
-            --port 80 \
-            --memory 512Mi \
-            --max-instances 1 \
-            --min-instances 0 \
-            --labels "environment=preview,issue=${ISSUE}"
-
-          URL=$(gcloud run services describe "$SERVICE" --platform managed --region ${{ env.REGION }} --format 'value(status.url)')
-          echo "url=$URL" >> $GITHUB_OUTPUT
+          echo "url=https://frontend-issue-${{ needs.extract.outputs.issue_number }}.example.com" >> $GITHUB_OUTPUT
+          echo "Mock frontend deployed"
 
   comment:
     runs-on: ubuntu-latest
