--- a/.github/workflows/test-issue-branch.yml
+++ b/.github/workflows/test-issue-branch.yml
@@ -8,6 +8,10 @@ on:
       - 'frontend/**'
       - '!**/*.md'
 
+env:
+  PROJECT_ID: duotopia-472708
+  REGION: asia-east1
+
 jobs:
   extract:
     runs-on: ubuntu-latest
@@ -26,3 +30,17 @@ jobs:
     needs: extract
     steps:
       - run: echo "Branch matched! Issue #${{ needs.extract.outputs.issue_number }}"
+
+  comment:
+    runs-on: ubuntu-latest
+    needs: extract
+    permissions:
+      issues: write
+    steps:
+      - uses: actions/github-script@v7
+        env:
+          ISSUE: ${{ needs.extract.outputs.issue_number }}
+        with:
+          script: |
+            console.log("Would comment on issue #" + process.env.ISSUE);
+            console.log("Skipping actual comment to avoid spam");
