--- a/.github/workflows/per-issue-deploy.yml
+++ b/.github/workflows/per-issue-deploy.yml
@@ -43,11 +43,46 @@ jobs:
     outputs:
       url: ${{ steps.deploy.outputs.url }}
     steps:
-      - name: Mock backend deploy
+      - uses: actions/checkout@v4
+
+      - uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - uses: google-github-actions/setup-gcloud@v2
+
+      - name: Deploy backend to Cloud Run
         id: deploy
+        working-directory: ./backend
         run: |
-          echo "🔍 DEBUG: Mock deploying backend"
+          echo "🔍 DEBUG: Starting real backend deployment"
           ISSUE=${{ needs.extract.outputs.issue_number }}
-          URL="https://backend-issue-${ISSUE}.example.com"
+          SERVICE="duotopia-preview-issue-${ISSUE}-backend"
+          IMAGE="${REGION}-docker.pkg.dev/${PROJECT_ID}/${REPOSITORY}/${SERVICE}:${{ github.sha }}"
+
+          echo "🔍 DEBUG: Configuring docker"
+          gcloud auth configure-docker ${REGION}-docker.pkg.dev
+
+          echo "🔍 DEBUG: Building image"
+          docker build -t "${IMAGE}" .
+
+          echo "🔍 DEBUG: Pushing image"
+          docker push "${IMAGE}"
+
+          echo "🔍 DEBUG: Deploying to Cloud Run"
+          gcloud run deploy "${SERVICE}" \
+            --image "${IMAGE}" \
+            --platform managed \
+            --region ${REGION} \
+            --allow-unauthenticated \
+            --port 8000 \
+            --memory 512Mi \
+            --max-instances 1 \
+            --min-instances 0 \
+            --set-env-vars "DATABASE_URL=${{ secrets.STAGING_DATABASE_URL }},ENVIRONMENT=preview" \
+            --labels "environment=preview,issue=${ISSUE}"
+
+          echo "🔍 DEBUG: Getting service URL"
+          URL=$(gcloud run services describe "${SERVICE}" --platform managed --region ${REGION} --format 'value(status.url)')
           echo "url=${URL}" >> $GITHUB_OUTPUT
-          echo "✅ Mock backend URL: ${URL}"
+          echo "✅ Backend deployed: ${URL}"
