fix: Per-Issue Preview Environment 增加完整環境變數 & 避免意外關閉 issue
## 修復內容

1. **Per-Issue Preview Environment 環境變數**
   - 加入所有 staging 環境變數（JWT, SUPABASE, SMTP, AZURE_SPEECH, TAPPAY 等）
   - 修復登入問題（之前缺少 JWT_SECRET 等認證相關變數）
   - 計算並設定 FRONTEND_URL

2. **避免意外關閉 Issue 的規則**
   - 更新 CLAUDE.md：說明不要在 feature branch 使用 "Fixes #N"
   - 更新 git-issue-pr-flow-agent.md：所有範例改用 "Related to #N"
   - 加入核心原則：只有 Release PR (staging → main) 才使用 "Fixes #N"

## 問題分析

Issue #15 被意外關閉的原因：
- Commit 9e94be8 有 "Fixes #15" 在 commit message
- 該 commit push 到 main 時，GitHub 自動關閉 issue
- 但該 commit 只是修復 workflow 檔案，不是修復 Admin CSS 問題
- 案主還沒測試就被關閉了

## 解決方案

以後只在最後的 Release PR 使用 "Fixes #N"，確保：
- Feature branch 開發時不會提前關閉 issue
- 案主有機會在 Per-Issue Test Environment 測試
- 通過 check-approvals 確認批准後才關閉

Related to #15

--- a/.github/workflows/per-issue-deploy.yml
+++ b/.github/workflows/per-issue-deploy.yml
@@ -70,6 +70,44 @@ jobs:
           docker push "${IMAGE}"
 
           echo "🔍 DEBUG: Deploying to Cloud Run"
+
+          # 計算 frontend URL（待 frontend 部署完成後會更新）
+          FRONTEND_URL="https://duotopia-preview-issue-${ISSUE}-frontend-${PROJECT_ID}.${REGION}.run.app"
+
+          # 環境變數設定（使用 staging 的配置）
+          ENV_VARS="DATABASE_URL=${{ secrets.STAGING_DATABASE_URL }}"
+          ENV_VARS="$ENV_VARS,DATABASE_POOLER_URL=${{ secrets.STAGING_DATABASE_POOLER_URL }}"
+          ENV_VARS="$ENV_VARS,DATABASE_TYPE=supabase"
+          ENV_VARS="$ENV_VARS,PROD_DATABASE_POOLER_URL=${{ secrets.PROD_DATABASE_POOLER_URL }}"
+          ENV_VARS="$ENV_VARS,JWT_SECRET=${{ secrets.STAGING_JWT_SECRET }}"
+          ENV_VARS="$ENV_VARS,JWT_ALGORITHM=HS256"
+          ENV_VARS="$ENV_VARS,JWT_EXPIRE_MINUTES=1440"
+          ENV_VARS="$ENV_VARS,ENVIRONMENT=preview"
+          ENV_VARS="$ENV_VARS,SUPABASE_URL=${{ secrets.STAGING_SUPABASE_URL }}"
+          ENV_VARS="$ENV_VARS,SUPABASE_KEY=${{ secrets.STAGING_SUPABASE_KEY }}"
+          ENV_VARS="$ENV_VARS,FRONTEND_URL=${FRONTEND_URL}"
+          ENV_VARS="$ENV_VARS,OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}"
+          ENV_VARS="$ENV_VARS,SMTP_HOST=${{ secrets.SMTP_HOST }}"
+          ENV_VARS="$ENV_VARS,SMTP_PORT=${{ secrets.SMTP_PORT }}"
+          ENV_VARS="$ENV_VARS,SMTP_USER=${{ secrets.SMTP_USER }}"
+          ENV_VARS="$ENV_VARS,SMTP_PASSWORD=${{ secrets.SMTP_PASSWORD }}"
+          ENV_VARS="$ENV_VARS,FROM_EMAIL=${{ secrets.FROM_EMAIL }}"
+          ENV_VARS="$ENV_VARS,FROM_NAME=${{ secrets.FROM_NAME }}"
+          ENV_VARS="$ENV_VARS,AZURE_SPEECH_KEY=${{ secrets.AZURE_SPEECH_KEY }}"
+          ENV_VARS="$ENV_VARS,AZURE_SPEECH_REGION=${{ secrets.AZURE_SPEECH_REGION }}"
+          ENV_VARS="$ENV_VARS,AZURE_SPEECH_ENDPOINT=${{ secrets.AZURE_SPEECH_ENDPOINT }}"
+          ENV_VARS="$ENV_VARS,GCP_PROJECT_ID=${PROJECT_ID}"
+          ENV_VARS="$ENV_VARS,REGION=${REGION}"
+          ENV_VARS="$ENV_VARS,GCS_BUCKET_NAME=duotopia-audio"
+          ENV_VARS="$ENV_VARS,TAPPAY_SANDBOX_APP_ID=${{ secrets.TAPPAY_SANDBOX_APP_ID }}"
+          ENV_VARS="$ENV_VARS,TAPPAY_SANDBOX_APP_KEY=${{ secrets.TAPPAY_SANDBOX_APP_KEY }}"
+          ENV_VARS="$ENV_VARS,TAPPAY_SANDBOX_PARTNER_KEY=${{ secrets.TAPPAY_SANDBOX_PARTNER_KEY }}"
+          ENV_VARS="$ENV_VARS,TAPPAY_SANDBOX_MERCHANT_ID=${{ secrets.TAPPAY_SANDBOX_MERCHANT_ID }}"
+          ENV_VARS="$ENV_VARS,TAPPAY_PRODUCTION_APP_ID=${{ secrets.TAPPAY_PRODUCTION_APP_ID }}"
+          ENV_VARS="$ENV_VARS,TAPPAY_PRODUCTION_APP_KEY=${{ secrets.TAPPAY_PRODUCTION_APP_KEY }}"
+          ENV_VARS="$ENV_VARS,TAPPAY_PRODUCTION_PARTNER_KEY=${{ secrets.TAPPAY_PRODUCTION_PARTNER_KEY }}"
+          ENV_VARS="$ENV_VARS,TAPPAY_PRODUCTION_MERCHANT_ID=${{ secrets.TAPPAY_PRODUCTION_MERCHANT_ID }}"
+
           gcloud run deploy "${SERVICE}" \
             --image "${IMAGE}" \
             --platform managed \
@@ -79,7 +117,7 @@ jobs:
             --memory 512Mi \
             --max-instances 1 \
             --min-instances 0 \
-            --set-env-vars "DATABASE_URL=${{ secrets.STAGING_DATABASE_URL }},ENVIRONMENT=preview" \
+            --set-env-vars "${ENV_VARS}" \
             --labels "environment=preview,issue=${ISSUE}"
 
           echo "🔍 DEBUG: Getting service URL"
