fix: 修正 Per-Issue workflow secret 名稱
- STAGING_SUPABASE_KEY → STAGING_SUPABASE_ANON_KEY
- PROD_DATABASE_POOLER_URL → PRODUCTION_DATABASE_POOLER_URL

這導致 SUPABASE_KEY 和 PROD_DATABASE_POOLER_URL 為空，造成登入失敗。

Related to #15

--- a/.github/workflows/per-issue-deploy.yml
+++ b/.github/workflows/per-issue-deploy.yml
@@ -78,13 +78,13 @@ jobs:
           ENV_VARS="DATABASE_URL=${{ secrets.STAGING_DATABASE_URL }}"
           ENV_VARS="$ENV_VARS,DATABASE_POOLER_URL=${{ secrets.STAGING_DATABASE_POOLER_URL }}"
           ENV_VARS="$ENV_VARS,DATABASE_TYPE=supabase"
-          ENV_VARS="$ENV_VARS,PROD_DATABASE_POOLER_URL=${{ secrets.PROD_DATABASE_POOLER_URL }}"
+          ENV_VARS="$ENV_VARS,PROD_DATABASE_POOLER_URL=${{ secrets.PRODUCTION_DATABASE_POOLER_URL }}"
           ENV_VARS="$ENV_VARS,JWT_SECRET=${{ secrets.STAGING_JWT_SECRET }}"
           ENV_VARS="$ENV_VARS,JWT_ALGORITHM=HS256"
           ENV_VARS="$ENV_VARS,JWT_EXPIRE_MINUTES=1440"
           ENV_VARS="$ENV_VARS,ENVIRONMENT=preview"
           ENV_VARS="$ENV_VARS,SUPABASE_URL=${{ secrets.STAGING_SUPABASE_URL }}"
-          ENV_VARS="$ENV_VARS,SUPABASE_KEY=${{ secrets.STAGING_SUPABASE_KEY }}"
+          ENV_VARS="$ENV_VARS,SUPABASE_KEY=${{ secrets.STAGING_SUPABASE_ANON_KEY }}"
           ENV_VARS="$ENV_VARS,FRONTEND_URL=${FRONTEND_URL}"
           ENV_VARS="$ENV_VARS,OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}"
           ENV_VARS="$ENV_VARS,SMTP_HOST=${{ secrets.SMTP_HOST }}"
