--- a/.github/workflows/cleanup-per-issue-on-close.yml
+++ b/.github/workflows/cleanup-per-issue-on-close.yml
@@ -12,7 +12,7 @@ env:
 
 permissions:
   issues: write
-  contents: read
+  contents: write
   id-token: write
 
 jobs:
@@ -20,6 +20,8 @@ jobs:
     if: github.event_name == 'issues'
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+
       - name: Extract issue number
         id: extract
         run: |
@@ -80,6 +82,21 @@ jobs:
             --quiet 2>/dev/null || echo "ℹ️ Backend images not found"
 
           echo "✅ Cleanup completed"
+
+      - name: Cleanup claude branch
+        run: |
+          ISSUE_NUM=${{ steps.extract.outputs.issue_number }}
+
+          echo "🗑️ Deleting claude branch for Issue #${ISSUE_NUM}..."
+
+          # Check if the exact branch exists: claude/issue-XX
+          BRANCH="claude/issue-${ISSUE_NUM}"
+          if git ls-remote --heads origin "refs/heads/${BRANCH}" | grep -q "${BRANCH}"; then
+            echo "Found branch to delete: $BRANCH"
+            git push origin --delete "$BRANCH" && echo "✅ Claude branch cleaned up" || echo "⚠️ Failed to delete $BRANCH"
+          else
+            echo "ℹ️ No claude branch found for Issue #${ISSUE_NUM}"
+          fi
 
       - name: Comment on issue
         uses: actions/github-script@v7
@@ -156,6 +173,22 @@ jobs:
             --quiet 2>/dev/null || echo "ℹ️ Backend images not found"
 
           echo "✅ Cleanup completed for Issue #${ISSUE_NUM}"
+
+      - name: Cleanup claude branch
+        if: steps.extract.outputs.issue_number != ''
+        run: |
+          ISSUE_NUM=${{ steps.extract.outputs.issue_number }}
+
+          echo "🗑️ Deleting claude branch for Issue #${ISSUE_NUM}..."
+
+          # Check if the exact branch exists: claude/issue-XX
+          BRANCH="claude/issue-${ISSUE_NUM}"
+          if git ls-remote --heads origin "refs/heads/${BRANCH}" | grep -q "${BRANCH}"; then
+            echo "Found branch to delete: $BRANCH"
+            git push origin --delete "$BRANCH" && echo "✅ Claude branch cleaned up" || echo "⚠️ Failed to delete $BRANCH"
+          else
+            echo "ℹ️ No claude branch found for Issue #${ISSUE_NUM}"
+          fi
 
       - name: Comment on related issue
         if: steps.extract.outputs.issue_number != ''
