--- a/backend/tests/load_testing/.env.example
+++ b/backend/tests/load_testing/.env.example
@@ -1,55 +1,31 @@
-# Load Testing Environment Configuration
-# Copy this file to .env and fill in your credentials
+# Load Testing Environment Configuration Example
+# Copy this file to .env and fill in your values
 
-# ============================================
-# Staging Environment (Safe for testing)
-# ============================================
+# ===== ENVIRONMENT SELECTION =====
+TEST_ENV=staging  # Options: staging, production, local
+
+# ===== STAGING ENVIRONMENT =====
 STAGING_BASE_URL=https://duotopia-staging-backend-316409492201.asia-east1.run.app
+TEST_STUDENT_EMAIL=student1@duotopia.com
+TEST_STUDENT_PASSWORD=20120101
+TEST_TEACHER_EMAIL=teacher@duotopia.com
+TEST_TEACHER_PASSWORD=password
+STAGING_DATABASE_URL=postgresql://user:password@host:5432/database
 
-# Test account credentials (create these in staging database)
-TEST_TEACHER_EMAIL=test-teacher@duotopia.co
-TEST_TEACHER_PASSWORD=your-test-password
-
-TEST_STUDENT_EMAIL=test-student@duotopia.co
-TEST_STUDENT_PASSWORD=your-test-password
-
-# Test data IDs (optional - will be auto-detected if not set)
-TEST_ASSIGNMENT_ID=1
-TEST_CONTENT_ITEM_ID=1
-
-# Database connection for monitoring (optional)
-STAGING_DATABASE_URL=postgresql://user:password@host:port/database
-
-# ============================================
-# Production Environment (⚠️ USE WITH CAUTION)
-# ============================================
+# ===== PRODUCTION ENVIRONMENT =====
+# WARNING: Only use for authorized production testing!
 PRODUCTION_BASE_URL=https://duotopia.co
+PROD_TEST_STUDENT_EMAIL=loadtest@duotopia.com
+PROD_TEST_STUDENT_PASSWORD=secure-password
+PRODUCTION_DATABASE_URL=postgresql://user:password@host:5432/database
 
-# Production test accounts (create dedicated load-test accounts)
-PROD_TEST_TEACHER_EMAIL=load-test-teacher@duotopia.co
-PROD_TEST_TEACHER_PASSWORD=load-test-password
+# ===== LOCAL ENVIRONMENT =====
+LOCAL_BASE_URL=http://localhost:8000
+LOCAL_TEST_STUDENT_EMAIL=test@example.com
+LOCAL_TEST_STUDENT_PASSWORD=test123
+LOCAL_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/duotopia
 
-PROD_TEST_STUDENT_EMAIL=load-test-student@duotopia.co
-PROD_TEST_STUDENT_PASSWORD=load-test-password
-
-# Production database (for monitoring only)
-PRODUCTION_DATABASE_URL=postgresql://user:password@host:port/database
-
-# ============================================
-# Test Configuration
-# ============================================
-
-# Target environment (staging|production|local)
-TEST_ENV=staging
-
-# Monitoring options
-ENABLE_DB_MONITORING=true
-DB_QUERY_INTERVAL=5  # seconds between DB checks
-
-# Results
-SAVE_RAW_DATA=true  # Save all request/response data
-
-# Alerting (optional)
-SLACK_WEBHOOK_URL=
-ALERT_ERROR_RATE_THRESHOLD=10.0  # percent
-ALERT_LATENCY_P95_THRESHOLD=15   # seconds
+# ===== TEST DATA (Optional) =====
+# If your tests need specific assignment/content IDs
+TEST_ASSIGNMENT_ID=123
+TEST_CONTENT_ITEM_ID=456
